--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lexical/react": "^0.30.0",
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-router": "^1.114.34",
+    "lexical": "^0.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.6"
