--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noUncheckedSideEffectImports": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["react-native", "node"]
   },
   "include": ["src", "vite.config.ts"],
   "exclude": ["node_modules"]
