--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.7",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-router": "^1.114.34",
     "@tiptap/extension-highlight": "^2.11.7",
@@ -27,6 +29,8 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "base64-arraybuffer": "^1.0.2",
+    "expo-file-system": "^18.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.6"
