--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@floating-ui/react": "^0.27.7",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@supabase/supabase-js": "^2.49.4",
-    "@tanstack/react-query": "^5.71.5",
+    "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-router": "^1.114.34",
     "@tanstack/router-cli": "^1.117.1",
     "@tiptap/extension-highlight": "^2.11.7",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@tanstack/react-router-devtools": "^1.114.34",
     "@tanstack/router-plugin": "^1.114.34",
     "@types/node": "^22.14.0",
