--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-file-system": "^18.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
